force-app/main/default/objects/Community_Discussion_Thread__c/Community_Discussion_Thread__c.object-meta.xml
<CustomObject>
    <label>Community Discussion Thread</label>
    <nameField>
        <label>Thread Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Discussion Threads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>