force-app/main/default/objects/Community_Discussion_Thread__c/fields/Moderation_Status__c.field-meta.xml
<CustomField>
    <fullName>Moderation_Status__c</fullName>
    <label>Moderation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>