force-app/main/default/objects/Community_Discussion_Thread__c/fields/Parent_Thread__c.field-meta.xml
<CustomField>
    <fullName>Parent_Thread__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Thread</label>
    <referenceTo>Parenting_Resource__c</referenceTo>
    <relationshipLabel>Community Discussion Threads</relationshipLabel>
    <relationshipName>Community_Discussion_Threads</relationshipName>
    <type>Lookup</type>
</CustomField>