force-app/main/default/objects/Community_Discussion_Thread__c/listViews/Content_Review_Queue_Community_Discussion_Thread.listView-meta.xml
<ListView>
    <fullName>Content_Review_Queue_Community_Discussion_Thread</fullName>
    <filterScope>Queue</filterScope>
    <label>Content Review Queue</label>
    <queue>Content_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>