force-app/main/default/objects/Community_Discussion_Thread__c/listViews/Event_Registration_Queue_Community_Discussion_Thread.listView-meta.xml
<ListView>
    <fullName>Event_Registration_Queue_Community_Discussion_Thread</fullName>
    <filterScope>Queue</filterScope>
    <label>Event Registration Queue</label>
    <queue>Event_Registration_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>