force-app/main/default/objects/Community_Discussion_Thread__c/listViews/Moderation_Queue_Community_Discussion_Thread.listView-meta.xml
<ListView>
    <fullName>Moderation_Queue_Community_Discussion_Thread</fullName>
    <filterScope>Queue</filterScope>
    <label>Moderation Queue</label>
    <queue>Moderation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>