force-app/main/default/objects/Community_Discussion_Thread__c/listViews/Newsletter_Subscription_Queue_Community_Discussion_Thread.listView-meta.xml
<ListView>
    <fullName>Newsletter_Subscription_Queue_Community_Discussion_Thread</fullName>
    <filterScope>Queue</filterScope>
    <label>Newsletter Subscription Queue</label>
    <queue>Newsletter_Subscription_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>