force-app/main/default/objects/Community_Discussion_Thread__c/listViews/Report_Abuse_Queue_Community_Discussion_Thread.listView-meta.xml
<ListView>
    <fullName>Report_Abuse_Queue_Community_Discussion_Thread</fullName>
    <filterScope>Queue</filterScope>
    <label>Report Abuse Queue</label>
    <queue>Report_Abuse_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>