force-app/main/default/objects/Community_Discussion_Thread__c/listViews/User_Support_Queue_Community_Discussion_Thread.listView-meta.xml
<ListView>
    <fullName>User_Support_Queue_Community_Discussion_Thread</fullName>
    <filterScope>Queue</filterScope>
    <label>User Support Queue</label>
    <queue>User_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>